--- a/src/styles.scss
+++ b/src/styles.scss
@@ -340,6 +340,7 @@ a {
 
     .gatsby-image-outer-wrapper {
         margin: 2rem 0;
+        box-shadow: 0px 10px 50px -15px $divider-grey;
 
         @media (max-width: 375px) {
             margin-left: -1.5rem;
@@ -443,14 +444,20 @@ a {
     }
 
     .tags {
-        margin: 3rem 0;
+        margin: 3rem auto;
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        padding: 2rem 1rem;
+        padding: 2rem 1.5rem;
         border: 1px solid $divider-grey;
         border-bottom-width: 2px;
         border-radius: 4px;
+        width: max-content;
+        max-width: 800px;
+
+        @media (max-width: 1024px) {
+            width: 100%;
+        }
 
         .header {
             color: $text-mid;
