--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,13 +266,14 @@ a {
     }
 
     .headline {
-        margin-top: 0;
+        margin: 0 0 1rem 0;
         line-height: 2.75rem;
         font-size: 2rem;
     }
 
     .subtitle {
         font-style: italic;
+        color: $text-light;
     }
 
     .date-author-share {
