--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ $nav-shadow: #eee;
 $blockquote-text: #888;
 
 * {
-    background-color: $light-smoke;
+    background-color: transparent;
 }
 
 a {
@@ -25,6 +25,11 @@ a {
 }
 
 .site-wrapper {
+    background-color: #f5f5f5;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23f1f1f1' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.site-content {
     display: flex;
     margin: auto;
     max-width: 1200px;
@@ -279,11 +284,19 @@ a {
     }
 
     .subtitle {
-        font-style: italic;
-        font-size: 1.1rem;
+        display: flex;
+        flex-flow: row nowrap;
         color: $mint-green;
-        margin: 0;
-        letter-spacing: 0.25px;
+
+        .icon {
+            margin: 0 0.6rem 0 0;
+        }
+
+        .text {
+            font-style: italic;
+            margin: 0;
+            letter-spacing: 0.25px;
+        }
     }
 
     .date-author-share {
@@ -306,10 +319,20 @@ a {
             
             .author {
                 margin: 0;
-                color: $text-lighter;
+                color: $text-mid;
                 font-size: 0.85rem;
                 font-style: italic;
                 background-color: inherit;
+
+                a {
+                    color: $text-mid;
+                    box-shadow: 0 2px 0 0 $mint-green !important;
+
+                    &:hover {
+                        color: $mint-green;
+                    }
+                }
+                
             }
         }
     }
@@ -340,11 +363,11 @@ a {
             // border-bottom-width: 2px;
             border-left: 6px solid $mint-green;
             border-radius: 4px;
-            background-color: $smoke;
+            background-color: $lighter-smoke;
     
             p {
                 color: $blockquote-text;
-                background-color: $smoke;
+                background-color: $lighter-smoke;
             }
         }
     }
@@ -465,9 +488,6 @@ a {
         flex-flow: column nowrap;
         align-items: center;
         padding: 1rem;
-        // border: 1px solid $divider-grey;
-        // border-bottom-width: 2px;
-        // border-radius: 4px;
         width: max-content;
         max-width: 800px;
 
@@ -577,6 +597,7 @@ a {
             border-radius: 4px;
             font-size: 0.9rem;
             user-select: none;
+            background-color: $light-smoke;
 
             .text, .icon {
                 display: inline;
