rm s3 image plugin

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -375,23 +375,24 @@ a {
         }
     }
 
-    .gatsby-image-outer-wrapper {
+    .gatsby-image-outer-wrapper, img {
         margin: 2rem 0;
         box-shadow: 0px 10px 50px -15px $divider-grey;
+        border-radius: 4px;
 
-        @media (max-width: 375px) {
-            margin-left: -1.5rem;
-            margin-right: -1.5rem;
-            border-radius: 0;
-        }
+        // @media (max-width: 375px) {
+        //     margin-left: -1.5rem;
+        //     margin-right: -1.5rem;
+        //     border-radius: 0;
+        // }
 
-        .gatsby-image-wrapper {
-            border-radius: 4px;
+        // .gatsby-image-wrapper, img {
+        //     border-radius: 4px;
 
-            @media (max-width: 375px) {
-                border-radius: 0;
-            }
-        }
+        //     @media (max-width: 375px) {
+        //         border-radius: 0;
+        //     }
+        // }
 
 
     }
