slim icons and change favicon

--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -344,7 +344,7 @@ a {
         line-height: 2rem;
 
         a {
-            color: $text-mid;
+            color: $text-dark;
             box-shadow: 0 2px 0 0 $mint-green !important;
 
             &:hover {
