--- a/static/styles/fontello/css/fontello-codes.css
+++ b/static/styles/fontello/css/fontello-codes.css
@@ -3,7 +3,10 @@
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-home:before { content: '\e802'; } /* '' */
 .icon-up-open:before { content: '\e803'; } /* '' */
+.icon-cancel:before { content: '\e804'; } /* '' */
+.icon-cancel-1:before { content: '\e805'; } /* '' */
 .icon-link-1:before { content: '\f07b'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-reddit-alien:before { content: '\f281'; } /* '' */
