--- a/static/styles/fontello/css/fontello.css
+++ b/static/styles/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?18535920');
-  src: url('../font/fontello.eot?18535920#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?18535920') format('woff2'),
-       url('../font/fontello.woff?18535920') format('woff'),
-       url('../font/fontello.ttf?18535920') format('truetype'),
-       url('../font/fontello.svg?18535920#fontello') format('svg');
+  src: url('../font/fontello.eot?7185142');
+  src: url('../font/fontello.eot?7185142#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7185142') format('woff2'),
+       url('../font/fontello.woff?7185142') format('woff'),
+       url('../font/fontello.ttf?7185142') format('truetype'),
+       url('../font/fontello.svg?7185142#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?18535920#fontello') format('svg');
+    src: url('../font/fontello.svg?7185142#fontello') format('svg');
   }
 }
 */
@@ -59,7 +59,10 @@
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-home:before { content: '\e802'; } /* '' */
 .icon-up-open:before { content: '\e803'; } /* '' */
+.icon-cancel:before { content: '\e804'; } /* '' */
+.icon-cancel-1:before { content: '\e805'; } /* '' */
 .icon-link-1:before { content: '\f07b'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-reddit-alien:before { content: '\f281'; } /* '' */
