--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -84,52 +84,54 @@ a {
         }
     }
 
-    .hamburger {
-        display: none;
-        z-index: 2;
+    // .mobile-menu-wrapper {
+        .hamburger {
+            display: none;
+            z-index: 10;
 
-        @media (max-width: 1024px) {
-            display: initial;
-        }
+            @media (max-width: 1024px) {
+                display: initial;
+            }
 
-        .white {
-            color: $light-smoke;
-            text-shadow: 2px 2px $text-dark;
-        }
-    }
-
-    .mobile-menu {
-        display: none;
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: 1;
-        width: 100vw;
-        height: 100vh;
-        background-color: $mint-green;
-        opacity: 0.9;
-
-        @media (max-width: 1024px) {
-            display: flex;
-            justify-content: center;
-        }
-
-        .links {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-flow: column nowrap;
-            margin: 0;
-            align-items: center;
-            justify-content: space-evenly;
-
-            h3 {
-                color: white;
+            .white {
+                color: $light-smoke;
                 text-shadow: 2px 2px $text-dark;
-                margin: 0;
             }
         }
-    }
+
+        .mobile-menu {
+            display: none;
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 1;
+            width: 100vw;
+            height: 100vh;
+            background-color: $mint-green;
+            opacity: 0.9;
+
+            @media (max-width: 1024px) {
+                display: flex;
+                justify-content: center;
+            }
+
+            .links {
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                flex-flow: column nowrap;
+                margin: 0;
+                align-items: center;
+                justify-content: space-evenly;
+
+                h3 {
+                    color: white;
+                    text-shadow: 2px 2px $text-dark;
+                    margin: 0;
+                }
+            }
+        }
+    // }
 }
 
 .sidebar-main {
@@ -461,6 +463,7 @@ a {
         display: flex;
         flex-flow: row nowrap;
         justify-content: flex-end;
+        position: relative;
 
         &.top {
             @media (max-width: 375px) {
@@ -539,6 +542,38 @@ a {
             .icon {
                 color: $mint-green;
             }
+        }
+
+        .link-tooltip {
+            position: absolute;
+            top: -0.9rem;
+            z-index: 1;
+            margin: 0;
+            background-color: $text-light;
+            opacity: 0;
+            color: white;
+            border-radius: 3px;
+            padding: 0.35rem 0.4rem 0.3rem 0.4rem;
+            line-height: 0.75rem;
+            font-size: 0.7rem;
+
+            -webkit-transition: opacity 0.25s;
+            transition: opacity 0.25s;
+
+            &.show {
+                opacity: 0.85;
+            }
+
+            // &:before {
+            //     content: "\A";
+            //     border-style: solid;
+            //     border-width: 10px 15px 10px 0;
+            //     border-color: transparent $text-lighter transparent transparent;
+            //     position: absolute;
+            //     top: 0.95rem;
+            //     left: 2rem;
+            //     transform: rotate(270deg); 
+            // }
         }
     }
 
