--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -1,4 +1,5 @@
 $mint-green: #4cb69f;
+$mint-green-dark: #44a38f;
 $pastel-purple: #877bb6;
 
 $smoke: #f1f1f1;
@@ -20,20 +21,33 @@ $blockquote-text: #888;
     background-color: transparent;
 }
 
+// html, body {
+//     height: 100%;
+// }
+
 a {
     box-shadow: none !important;
 }
 
+// #___gatsby {
+//     min-height: 100%;
+
+//     &:first-child {
+//         min-height: 100%;
+//     }
+// }
+
 .site-wrapper {
+    // min-height: 100%;
     background-color: #f5f5f5;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23f1f1f1' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-}
 
-.site-content {
-    display: flex;
-    margin: auto;
-    max-width: 1200px;
-    flex-flow: column nowrap;
+    .site-content {
+        display: flex;
+        margin: auto;
+        max-width: 1200px;
+        flex-flow: column nowrap;
+    }
 }
 
 .navbar {
@@ -307,6 +321,60 @@ a {
     }
 }
 
+.post-list {
+    display: flex;
+    flex-flow: column nowrap;
+
+    .post {
+        display: flex;
+        flex-flow: row nowrap;
+        margin: 1rem 0;
+        border: 1px solid $mint-green;
+        border-bottom-width: 2px;
+        border-radius: 6px;
+        background-color: $lighter-smoke;
+
+        .image {
+            margin: -1px -1px -2px -1px;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+
+        .words {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-between;
+            margin: 1.5rem;
+
+           .title {
+                margin: 0;
+            }
+
+            .subtitle {
+                display: flex;
+                flex-flow: row nowrap;
+                font-size: 0.9rem;
+
+                .icon {
+                    margin: 0 0.25rem 0 0;
+                    color: $mint-green;
+                }
+
+                .text {
+                    font-style: italic;
+                    margin: 0;
+                    letter-spacing: 0.5px;
+                    color: $mint-green-dark;
+                }
+            }
+
+            .date {
+                margin: 0;
+            } 
+        }
+    }
+}
+
 .blog-post {
     display: flex;
     flex-flow: column nowrap;
@@ -359,7 +427,7 @@ a {
             font-style: italic;
             margin: 0;
             letter-spacing: 0.5px;
-            color: $mint-green;
+            color: $mint-green-dark;
         }
     }
 
