--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -330,14 +330,47 @@ a {
         flex-flow: row nowrap;
         margin: 1rem 0;
         border: 1px solid $mint-green;
-        border-bottom-width: 2px;
+        justify-content: space-between;
         border-radius: 6px;
         background-color: $lighter-smoke;
 
+        @media (max-width: 1024px) {
+            flex-direction: column;
+            border-radius: 7px;
+        }
+
+        &:nth-child(even) {
+            flex-direction: row-reverse;
+
+            @media (max-width: 1024px) {
+                flex-direction: column;
+            }
+
+            .image {
+                border-radius: 0;
+                border-top-right-radius: 6px;
+                border-bottom-right-radius: 6px;
+
+                @media (max-width: 1024px) {
+                    border-radius: 0;
+                    border-top-left-radius: 6px;
+                    border-top-right-radius: 6px;
+                    margin: 0;
+                }
+            }
+        }
+
         .image {
-            margin: -1px -1px -2px -1px;
-            border-top-left-radius: 4px;
-            border-bottom-left-radius: 4px;
+            margin: -1px;
+            border-top-left-radius: 6px;
+            border-bottom-left-radius: 6px;
+
+            @media (max-width: 1024px) {
+                margin: 0;
+                border-radius: 0;
+                border-top-left-radius: 6px;
+                border-top-right-radius: 6px;
+            }
         }
 
         .words {
@@ -347,13 +380,15 @@ a {
             margin: 1.5rem;
 
            .title {
-                margin: 0;
+                margin: 0 0 1rem 0;
+                line-height: 1.75rem;
             }
 
             .subtitle {
                 display: flex;
                 flex-flow: row nowrap;
                 font-size: 0.9rem;
+                margin: 0 0 2rem 0;
 
                 .icon {
                     margin: 0 0.25rem 0 0;
