--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -318,6 +318,10 @@ a {
     .main {
         max-width: 800px;
         margin: 1.5rem;
+
+        // @media (max-width: 1024px) {
+        //     max-width: 100%;
+        // }
     }
 }
 
@@ -325,18 +329,26 @@ a {
     display: flex;
     flex-flow: column nowrap;
 
+    @media (max-width: 1024px) {
+        flex-flow: row wrap;
+        justify-content: center;
+    }
+
     .post {
         display: flex;
         flex-flow: row nowrap;
         margin: 1rem 0;
         border: 1px solid $mint-green;
-        justify-content: space-between;
         border-radius: 6px;
         background-color: $lighter-smoke;
+        justify-content: space-between;
 
         @media (max-width: 1024px) {
             flex-direction: column;
+            justify-content: flex-start;
             border-radius: 7px;
+            max-width: 300px;
+            margin: 1rem;
         }
 
         &:nth-child(even) {
@@ -378,6 +390,7 @@ a {
             flex-flow: column nowrap;
             justify-content: space-between;
             margin: 1.5rem;
+            height: 100%;
 
            .title {
                 margin: 0 0 1rem 0;
@@ -664,7 +677,7 @@ a {
             transition: opacity 0.25s;
 
             &.show {
-                opacity: 0.85;
+                opacity: 0.9;
             }
 
             // &:before {
