--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -62,8 +62,8 @@ a {
 
     @media (max-width: 1024px) {
         margin-bottom: 0;
-        padding: 1rem 1.5rem;
-        justify-content: space-between;
+        // padding: 1rem 1.5rem;
+        // justify-content: space-between;
     }
 
     .gamepad-icon-link {
@@ -75,7 +75,7 @@ a {
         max-width: 800px;
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-between;
+        justify-content: space-around;
 
         @media (max-width: 1024px) {
             display: none;
@@ -325,100 +325,117 @@ a {
     }
 }
 
-.post-list {
+.post-list-wrapper {
     display: flex;
     flex-flow: column nowrap;
+    align-items: center;
+    max-width: 800px;
 
-    @media (max-width: 1024px) {
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-
-    .post {
-        display: flex;
-        flex-flow: row nowrap;
-        margin: 1rem 0;
-        border: 1px solid $mint-green;
-        border-radius: 6px;
-        background-color: $lighter-smoke;
-        justify-content: space-between;
+    .tag-name {
+        margin: 0 1rem 1rem 1rem;
+        line-height: 1.85rem;
 
         @media (max-width: 1024px) {
-            flex-direction: column;
-            justify-content: flex-start;
-            border-radius: 7px;
-            max-width: 300px;
             margin: 1rem;
+            max-width: 300px;
+        }
+    }
+
+    .post-list {
+        display: flex;
+        flex-flow: column nowrap;
+
+        @media (max-width: 1024px) {
+            flex-flow: row wrap;
+            justify-content: center;
         }
 
-        &:nth-child(even) {
-            flex-direction: row-reverse;
+        .post {
+            display: flex;
+            flex-flow: row nowrap;
+            margin: 1rem 0;
+            border: 1px solid $mint-green;
+            border-radius: 7px;
+            background-color: $lighter-smoke;
+            justify-content: space-between;
 
             @media (max-width: 1024px) {
                 flex-direction: column;
+                justify-content: flex-start;
+                border-radius: 7px;
+                max-width: 300px;
+                margin: 1rem;
+            }
+
+            &:nth-child(even) {
+                flex-direction: row-reverse;
+
+                @media (max-width: 1024px) {
+                    flex-direction: column;
+                }
+
+                .image {
+                    border-radius: 0;
+                    border-top-right-radius: 6px;
+                    border-bottom-right-radius: 6px;
+
+                    @media (max-width: 1024px) {
+                        border-radius: 0;
+                        border-top-left-radius: 6px;
+                        border-top-right-radius: 6px;
+                        margin: 0;
+                    }
+                }
             }
 
             .image {
-                border-radius: 0;
-                border-top-right-radius: 6px;
-                border-bottom-right-radius: 6px;
+                margin: 0;
+                border-top-left-radius: 6px;
+                border-bottom-left-radius: 6px;
 
                 @media (max-width: 1024px) {
+                    margin: 0;
                     border-radius: 0;
                     border-top-left-radius: 6px;
                     border-top-right-radius: 6px;
-                    margin: 0;
                 }
             }
-        }
 
-        .image {
-            margin: -1px;
-            border-top-left-radius: 6px;
-            border-bottom-left-radius: 6px;
-
-            @media (max-width: 1024px) {
-                margin: 0;
-                border-radius: 0;
-                border-top-left-radius: 6px;
-                border-top-right-radius: 6px;
-            }
-        }
-
-        .words {
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: space-between;
-            margin: 1.5rem;
-            height: 100%;
-
-           .title {
-                margin: 0 0 1rem 0;
-                line-height: 1.75rem;
-            }
-
-            .subtitle {
+            .words {
                 display: flex;
-                flex-flow: row nowrap;
-                font-size: 0.9rem;
-                margin: 0 0 2rem 0;
+                flex-flow: column nowrap;
+                justify-content: space-between;
+                margin: 1.5rem;
+                height: 100%;
 
-                .icon {
-                    margin: 0 0.25rem 0 0;
-                    color: $mint-green;
+            .title {
+                    margin: 0 0 1rem 0;
+                    line-height: 1.85rem;
                 }
 
-                .text {
-                    font-style: italic;
+                .subtitle {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    font-size: 0.9rem;
+                    margin: 0 0 2rem 0;
+
+                    .icon {
+                        margin: 0 0.25rem 0 0;
+                        color: $mint-green;
+                    }
+
+                    .text {
+                        font-style: italic;
+                        margin: 0;
+                        letter-spacing: 0.5px;
+                        color: $mint-green-dark;
+                    }
+                }
+
+                .date {
                     margin: 0;
-                    letter-spacing: 0.5px;
-                    color: $mint-green-dark;
-                }
+                } 
             }
-
-            .date {
-                margin: 0;
-            } 
         }
     }
 }
@@ -668,7 +685,7 @@ a {
             background-color: $text-light;
             opacity: 0;
             color: white;
-            border-radius: 4px;
+            border-radius: 3px;
             padding: 0.3rem 0.4rem 0.25rem 0.4rem;
             line-height: 0.75rem;
             font-size: 0.7rem;
@@ -802,7 +819,7 @@ a {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
-        padding: 1rem;
+        padding-top: 1rem;
 
         .button {
             padding: 0.5rem 1rem;
@@ -845,7 +862,7 @@ a {
 
 .footer {
     display: flex;
-    padding: 1rem 0;
+    padding: 1rem 1.5rem;
     margin-top: 2rem;
     flex-flow: row nowrap;
     justify-content: center;
