--- a/static/styles/fontello/css/fontello-codes.css
+++ b/static/styles/fontello/css/fontello-codes.css
@@ -9,4 +9,5 @@
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-reddit-alien:before { content: '\f281'; } /* '' */
