--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -354,18 +354,18 @@ a {
         .post {
             display: flex;
             flex-flow: row nowrap;
-            margin: 1rem 0;
-            border: 1px solid $mint-green;
-            border-radius: 7px;
+            margin: 1.5rem 0;
+            border: 2px solid $mint-green;
+            border-radius: 8px;
             background-color: $lighter-smoke;
             justify-content: space-between;
 
             @media (max-width: 1024px) {
                 flex-direction: column;
                 justify-content: flex-start;
-                border-radius: 7px;
                 max-width: 300px;
                 margin: 1rem;
+                height: 100%;
             }
 
             &:nth-child(even) {
@@ -407,9 +407,8 @@ a {
                 flex-flow: column nowrap;
                 justify-content: space-between;
                 margin: 1.5rem;
-                height: 100%;
 
-            .title {
+                .title {
                     margin: 0 0 1rem 0;
                     line-height: 1.85rem;
                 }
@@ -435,6 +434,7 @@ a {
 
                 .date {
                     margin: 0;
+                    color: $text-mid;
                 } 
             }
         }
@@ -483,17 +483,16 @@ a {
     .subtitle {
         display: flex;
         flex-flow: row nowrap;
+        color: $mint-green;
 
         .icon {
             margin: 0 0.25rem 0 0;
-            color: $mint-green;
         }
 
         .text {
             font-style: italic;
             margin: 0;
-            letter-spacing: 0.5px;
-            color: $mint-green-dark;
+            letter-spacing: 1px;
         }
     }
 
@@ -574,7 +573,7 @@ a {
     .gatsby-image-outer-wrapper, img {
         margin: 2rem 0;
         box-shadow: 0px 10px 50px -15px $divider-grey;
-        border-radius: 4px;
+        border-radius: 6px;
         width: 100%;
 
         // @media (max-width: 375px) {
@@ -617,7 +616,7 @@ a {
 
         &.bottom {
             justify-content: center;
-            padding: 1rem;;
+            padding: 1rem 0;
 
             // .share-button {
             //     border-color: $divider-grey;
@@ -645,8 +644,8 @@ a {
             width: 2.5rem;
             display: flex;
             justify-content: center;
-            border: 1px solid $divider-grey;
-            border-bottom-width: 2px;
+            border: 2px solid $divider-grey;
+            // border-bottom-width: 3px;
             background-color: white;
             // border-bottom-width: 2px;
             // border-color: $divider-grey;
@@ -721,7 +720,7 @@ a {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        padding: 1rem;
+        padding: 1rem 0;
         width: max-content;
         max-width: 800px;
 
@@ -743,11 +742,11 @@ a {
                 padding: 0.5rem 1rem;
                 margin: 0.25rem;
                 // border-bottom: 2px solid $divider-grey;
-                border: 1px solid $divider-grey;
-                border-bottom-width: 2px;
+                border: 2px solid $divider-grey;
+                // border-bottom-width: 3px;
                 background-color: white;
                 // border-bottom-width: 2px;
-                border-radius: 4px;
+                border-radius: 6px;
                 font-size: 0.9rem;
                 user-select: none;
 
@@ -826,9 +825,8 @@ a {
         .button {
             padding: 0.5rem 1rem;
             margin: 0.25rem;
-            border: 1px solid $divider-grey;
-            border-bottom-width: 2px;
-            border-radius: 4px;
+            border: 2px solid $divider-grey;
+            border-radius: 6px;
             font-size: 0.9rem;
             user-select: none;
             background-color: $light-smoke;
