--- a/static/styles/fontello/css/fontello.css
+++ b/static/styles/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?7185142');
-  src: url('../font/fontello.eot?7185142#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?7185142') format('woff2'),
-       url('../font/fontello.woff?7185142') format('woff'),
-       url('../font/fontello.ttf?7185142') format('truetype'),
-       url('../font/fontello.svg?7185142#fontello') format('svg');
+  src: url('../font/fontello.eot?89882026');
+  src: url('../font/fontello.eot?89882026#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?89882026') format('woff2'),
+       url('../font/fontello.woff?89882026') format('woff'),
+       url('../font/fontello.ttf?89882026') format('truetype'),
+       url('../font/fontello.svg?89882026#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?7185142#fontello') format('svg');
+    src: url('../font/fontello.svg?89882026#fontello') format('svg');
   }
 }
 */
@@ -65,4 +65,5 @@
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-reddit-alien:before { content: '\f281'; } /* '' */
