--- a/static/styles/fontello/css/fontello.css
+++ b/static/styles/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?89882026');
-  src: url('../font/fontello.eot?89882026#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?89882026') format('woff2'),
-       url('../font/fontello.woff?89882026') format('woff'),
-       url('../font/fontello.ttf?89882026') format('truetype'),
-       url('../font/fontello.svg?89882026#fontello') format('svg');
+  src: url('../font/fontello.eot?93974931');
+  src: url('../font/fontello.eot?93974931#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?93974931') format('woff2'),
+       url('../font/fontello.woff?93974931') format('woff'),
+       url('../font/fontello.ttf?93974931') format('truetype'),
+       url('../font/fontello.svg?93974931#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?89882026#fontello') format('svg');
+    src: url('../font/fontello.svg?93974931#fontello') format('svg');
   }
 }
 */
@@ -61,9 +61,10 @@
 .icon-up-open:before { content: '\e803'; } /* '' */
 .icon-cancel:before { content: '\e804'; } /* '' */
 .icon-cancel-1:before { content: '\e805'; } /* '' */
+.icon-clock:before { content: '\e806'; } /* '' */
+.icon-clock-1:before { content: '\e807'; } /* '' */
 .icon-link-1:before { content: '\f07b'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-reddit-alien:before { content: '\f281'; } /* '' */
