--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -377,7 +377,7 @@ a {
     }
 
     .tag-name {
-        margin: 1rem 1rem 0.5rem 1rem;
+        margin: 1rem;
         line-height: 1.85rem;
         text-align: center;
 
