--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -546,7 +546,7 @@ a {
         flex-flow: row nowrap;
         color: $mint-green;
         line-height: 1.5rem;
-        margin-top: 1.5rem;
+        margin-top: 1rem;
 
         .icon {
             margin: 0 0.7rem 0 0;
@@ -568,7 +568,7 @@ a {
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
-        margin: 0;
+        margin: 2.5rem 0 0 0;
 
         @media (max-width: 375px) {
             flex-direction: column;
