--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -42,7 +42,7 @@ a {
     padding: 1rem 1.5rem;
     margin-bottom: 2rem;
     flex-flow: row nowrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     border-bottom: 2px solid $mint-green;
     // box-shadow: 0px 15px 20px -15px $nav-shadow; 
@@ -55,6 +55,15 @@ a {
 
     .gamepad-icon-link {
         height: 1.5rem;
+        margin: 0 1.5rem;
+    }
+
+    .text {
+        font-variant: small-caps;
+        font-family: 'Merriweather Sans', sans-serif;
+        font-size: 0.95rem;
+        letter-spacing: 1px;
+        color: $mint-green;
     }
 
     .links {
@@ -493,7 +502,7 @@ a {
                     font-size: 0.75rem;
 
                     .icon {
-                        margin-right: 0.25rem;
+                        margin-right: 0.35rem;
                     }
                 } 
             }
@@ -930,15 +939,12 @@ a {
     //     margin-top: 0;
     // }
 
-    a {
-        font-size: 16px;
-        margin-right: 1rem;
-        height: 1.5rem;
+    .social-icon {
+        color: $mint-green;
     }
 
-    p {
-        margin: 0;
-        font-size: 16px;
-        line-height: 1.5rem;
+    .gamepad-icon-link {
+        height: 1.5rem;
+        margin: 0 2.5rem;
     }
 }
