--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -47,6 +47,10 @@ a {
     border-bottom: 2px solid $mint-green;
     // box-shadow: 0px 15px 20px -15px $nav-shadow; 
 
+    -webkit-box-shadow: $divider-grey 0px 10px 10px -10px;
+    -moz-box-shadow: $divider-grey 0px 10px 10px -10px;
+    box-shadow: $divider-grey 0px 10px 10px -10px;
+
     @media (max-width: 1024px) {
         margin-bottom: 0;
         // padding: 1rem 1.5rem;
@@ -55,13 +59,14 @@ a {
 
     .gamepad-icon-link {
         height: 1.5rem;
-        margin: 0 1.5rem;
+        margin: 0 2rem;
     }
 
     .text {
         font-variant: small-caps;
         font-family: 'Merriweather Sans', sans-serif;
         font-size: 0.95rem;
+        font-style: italic;
         letter-spacing: 1px;
         color: $mint-green;
     }
@@ -939,12 +944,24 @@ a {
     //     margin-top: 0;
     // }
 
+    @media (max-width: 425px) {
+        justify-content: space-evenly;
+    }
+
     .social-icon {
-        color: $mint-green;
+        font-size: 0.95rem;
+        
+        &.facebook {
+            color: #3b5998;
+        }
+
+        &.twitter {
+            color: #00aced;
+        }
     }
 
     .gamepad-icon-link {
         height: 1.5rem;
-        margin: 0 2.5rem;
+        margin: 0 3rem;
     }
 }
