--- a/static/styles/all.scss
+++ b/static/styles/all.scss
@@ -59,15 +59,16 @@ a {
 
     .gamepad-icon-link {
         height: 1.5rem;
-        margin: 0 2rem;
+        width: 1.5rem;
+        margin: 0 4rem;
     }
 
     .text {
         font-variant: small-caps;
         font-family: 'Merriweather Sans', sans-serif;
         font-size: 0.95rem;
-        font-style: italic;
-        letter-spacing: 1px;
+        // font-style: italic;
+        letter-spacing: 0.25rem;
         color: $mint-green;
     }
 
@@ -348,6 +349,7 @@ a {
 
         @media (max-width: 1024px) {
             max-width: 300px;
+            margin: 1.5rem;
         }
 
         a, .icon {
@@ -962,6 +964,7 @@ a {
 
     .gamepad-icon-link {
         height: 1.5rem;
-        margin: 0 3rem;
+        width: 1.5rem;
+        margin: 0 4rem;
     }
 }
